--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -1,8 +1,9 @@
 # This is a basic workflow to help you get started with Actions
 
 name: CI
-
 on:
+  push:
+    branches: [ "main" ]
   workflow_dispatch:
     inputs:
       logLevel:
